apps/sabnzbd/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  namespace: media
  labels:
    app: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
      annotations:
        diun.enable: "true"
    spec:
      volumes:
        - name: sabnzbd-config
          persistentVolumeClaim:
            claimName: sabnzbd-config
        - name: downloads
          persistentVolumeClaim:
            claimName: download
      containers:
        - name: sabnzbd
          image: ghcr.io/hotio/sabnzbd:release-4.5.1
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: sabnzbd-config
              mountPath: /config
            - name: downloads
              mountPath: /data
      nodeSelector:
          kubernetes.io/arch: amd64
          pvpn: "true" 
          workload: "general"
      tolerations:
          - key: "network"
            operator: "Equal"
            value: "pvpn"
            effect: "NoSchedule"
