apps/sabnzbd/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-service
  namespace: media
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
  selector:
    app: sabnzbd
  type: ClusterIP
